<resources>
    <string name="app_name" translatable="false">MeasurementConverter</string>


    <string name="et_inch" translatable="true">Inches</string>
    <string name="et_yard" translatable="true">Yards</string>
    <string name="et_foot" translatable="true">Feet</string>
    <string name="et_mile" translatable="true">Miles</string>
    <string name="et_yottametre" translatable="true">Yottameters</string>
    <string name="et_zettametre" translatable="true">Zettameters</string>
    <string name="et_exametre" translatable="true">Exameters</string>
    <string name="et_petametre" translatable="true">Petameters</string>
    <string name="et_terametre" translatable="true">Terameters</string>
    <string name="et_gigametre" translatable="true">Gigameters</string>
    <string name="et_megametre" translatable="true">Megameters</string>
    <string name="et_kilometre" translatable="true">Kilometers</string>
    <string name="et_hectometre" translatable="true">Hectometers</string>
    <string name="et_decametre" translatable="true">Decameters</string>
    <string name="et_metre" translatable="true">Meters</string>
    <string name="et_decimetre" translatable="true">Decimeters</string>
    <string name="et_centimetre" translatable="true">Centimeters</string>
    <string name="et_millimetre" translatable="true">Millimeters</string>
    <string name="et_micrometre" translatable="true">Micrometers</string>
    <string name="et_nanometre" translatable="true">Nanometers</string>
    <string name="et_picometre" translatable="true">Picometers</string>
    <string name="et_femtometre" translatable="true">Femtometers</string>
    <string name="et_attometre" translatable="true">Attometers</string>
    <string name="et_zeptometre" translatable="true">Zeptometers</string>
    <string name="et_yoctometre" translatable="true">Yoctometers</string>

    <string name="et_hint" translatable="true">Type number here</string>
    <string name="text_copied" translatable="true">Text copied</string>
    <string name="text_max_num" translatable="true">Number is out of bounds</string>
    <string name="text_too_many_dots" translatable="true">Extra characters have been removed</string>
</resources>