<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/Measures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/Inch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_et_inch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/et_inch"
                android:textColor="@color/purple_700" />

            <EditText
                android:id="@+id/et_inch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/et_hint"
                android:importantForAutofill="no"
                android:inputType="number|text"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Yard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_et_yard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/et_yard"
                android:textColor="@color/purple_700" />

            <EditText
                android:id="@+id/et_yard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/et_hint"
                android:importantForAutofill="no"
                android:inputType="number|text"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Foot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_et_foot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/et_foot"
                android:textColor="@color/purple_700" />

            <EditText
                android:id="@+id/et_foot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/et_hint"
                android:importantForAutofill="no"
                android:inputType="number|text"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Mile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_et_mile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/et_mile"
                android:textColor="@color/purple_700" />

            <EditText
                android:id="@+id/et_mile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/et_hint"
                android:importantForAutofill="no"
                android:inputType="number|text"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Yottametre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_et_yottametre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/et_yottametre"
                android:textColor="@color/purple_700" />

            <EditText
                android:id="@+id/et_yottametre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/et_hint"
                android:importantForAutofill="no"
                android:inputType="number|text"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Zettametre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_et_zettametre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/et_zettametre"
                android:textColor="@color/purple_700" />

            <EditText
                android:id="@+id/et_zettametre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/et_hint"
                android:importantForAutofill="no"
                android:inputType="number|text"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Exametre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_et_exametre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/et_exametre"
                android:textColor="@color/purple_500" />

            <EditText
                android:id="@+id/et_exametre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/et_hint"
                android:importantForAutofill="no"
                android:inputType="number|text"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Petametre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_et_petametre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/et_petametre"
                android:textColor="@color/purple_500" />

            <EditText
                android:id="@+id/et_petametre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/et_hint"
                android:importantForAutofill="no"
                android:inputType="number|text"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Terametre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_et_terametre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/et_terametre"
                android:textColor="@color/purple_500" />

            <EditText
                android:id="@+id/et_terametre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/et_hint"
                android:importantForAutofill="no"
                android:inputType="number|text"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Gigametre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_et_gigametre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/et_gigametre"
                android:textColor="@color/purple_500" />

            <EditText
                android:id="@+id/et_gigametre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/et_hint"
                android:importantForAutofill="no"
                android:inputType="number|text"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Megametre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_et_megametre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/et_megametre"
                android:textColor="@color/purple_500" />

            <EditText
                android:id="@+id/et_megametre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/et_hint"
                android:importantForAutofill="no"
                android:inputType="number|text"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Kilometre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_et_kilometre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/et_kilometre"
                android:textColor="@color/purple_500" />

            <EditText
                android:id="@+id/et_kilometre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/et_hint"
                android:importantForAutofill="no"
                android:inputType="number|text"
                android:minHeight="48dp"
                android:textColorHint="@color/hint_black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>